--- a/analysis.qmd
+++ b/analysis.qmd
@@ -53,10 +53,19 @@ You will
 -   Introduce what motivates your Data Analysis (DA)
     -   Which variables and relationships are you most interested in?
     -   What questions are you interested in answering?
+    # how does child's housing environment (food access, greenspace access, heat exposure, ozone concentration, airborne microparticles, walkability, waste dump sites, industrial pollutants) impact child's success (z_HE_nat)
+    # how does child's social environment (housing vacancy rate, poverty rate, public assistant rate, home ownership rate, high skill employment, med house income, employment rate) impact z_SE_nat
+    # how does child's education environment (AP enrollment, adult education attainment, college enrollment, early child enrollment, HS grad, math prof, reading prof, school pov, teacher_exp, edu centers, high quality edu centers) impact z_ED_RATE 
+   
     -   Provide context for the rest of the page. This will include figures/tables that illustrate aspects of the data of your question.
 -   Modeling and Inference
     -   The page will include some kind of formal statistical model. This could be a linear regression, logistic regression, or another modeling framework.
+    # linear reg: poverty vs COI z score
+    # logistic reg NEEDED
+    
     -   Explain the ideas and techniques you used to choose the predictors for your model. (Think about including interaction terms and other transformations of your variables.)
+    # can use intuition and info from visualizations
+    
     -   Describe the results of your modelling and make sure to give a sense of the uncertainty in your estimates and conclusions.
 -   Explain the flaws and limitations of your analysis
     -   Are there some assumptions that you needed to make that might not hold? Is there other data that would help to answer your questions?
