--- a/dataset/testing.qmd
+++ b/dataset/testing.qmd
@@ -24,7 +24,7 @@ index <- index |>
 ```{r}
 merged_df <- inner_join(childpop, indicators, by = "geoid") |>
   distinct()
-cleaned_merged_df <- merge(merged_df, index, by = "geoid") |>
+cleaned_merged_df <- inner_join(merged_df, index, by = "geoid") |>
   distinct()
 ```
 
@@ -82,6 +82,7 @@ head(cleaned_merged_df)
 ```{r}
 na_rows_count <- sum(!complete.cases(cleaned_merged_df))
 cleaned_data <- na.omit(cleaned_merged_df)
+cleaned_data <- select(cleaned_data, -in_largest_metro, -in_metromicro_not_in_100, -not_in_metromicro)
 ```
 
 
