--- a/data.qmd
+++ b/data.qmd
@@ -50,7 +50,7 @@ Your [load_and_clean_data.R](/scripts/load_and_clean_data.R) file is how you wil
 library(here)
 source(
   "scripts/load_and_clean_data.R",
-  echo = TRUE # Use echo=FALSE or omit it to avoid code output  
+  echo = FALSE # Use echo=FALSE or omit it to avoid code output  
 )
 ```
 
