--- a/analysis.qmd
+++ b/analysis.qmd
@@ -7,6 +7,59 @@ draft: false
 
 ![](https://upload.wikimedia.org/wikipedia/commons/7/77/Pebbleswithquarzite.jpg)
 
+```{r}
+library(ggplot2)
+library(readr)
+library(dplyr)
+library(tidyr)
+
+cleaned_data <- readRDS('dataset/cleaned_data.rds')
+
+unique_states <- unique(cleaned_data$state_usps)
+length(unique_states)
+
+region_data <- data.frame(
+  state_usps = c(
+    "AL", "AK", "AZ", "AR", "CA", "CO", "CT", "DE", "FL", "GA", "HI", "ID", "IL", "IN", "IA", "KS", 
+    "KY", "LA", "ME", "MD", "MA", "MI", "MN", "MS", "MO", "MT", "NE", "NV", "NH", "NJ", "NM", "NY", 
+    "NC", "ND", "OH", "OK", "OR", "PA", "RI", "SC", "SD", "TN", "TX", "UT", "VT", "VA", "WA", "WV", 
+    "WI", "WY", "DC"
+  ),
+  region = c(
+    "South", "West", "West", "South", "West", "West", "Northeast", "Northeast", "South", "South", 
+    "West", "West", "Midwest", "Midwest", "Midwest", "Midwest", "South", "South", "Northeast", 
+    "Northeast", "Northeast", "Midwest", "Midwest", "South", "Midwest", "West", "Midwest", "Midwest", 
+    "West", "Northeast", "Northeast", "West", "South", "Midwest", "Midwest", "South", "Northeast", 
+    "South", "Midwest", "Northeast", "South", "Midwest", "South", "West", "West", "Northeast", "South",
+    "West", "Northeast", "Northeast", "Northeast"
+  )
+)
+
+college_data <- cleaned_data %>%
+  left_join(region_data, by = "state_usps") %>%
+  select(aian, api, black, white, hisp, college_enrollment, state_usps, region)
+
+college_data_long <- tidyr::pivot_longer(college_data,
+                                         cols = c(aian, api, black, white, hisp),
+                                         names_to = "race",
+                                         names_repair = "unique")
+
+college_data_summarized <- college_data_long %>%
+  group_by(region, race) %>%
+  summarize(average_college_enrollment = mean(value, na.rm = TRUE))
+
+ggplot(college_data_summarized, aes(x = race, y = average_college_enrollment, fill = race)) +
+  geom_bar(stat = "identity", position = "dodge") +
+  facet_wrap(~region) +  # Facet by region
+  labs(title = "Average College Enrollment by Race and Region",
+       x = "Race",
+       y = "Average College Enrollment",
+       fill = "Race") +
+  theme_minimal() +
+  theme(axis.text.x = element_text(angle = 45, hjust = 1))
+
+```
+
 
 
 ------------------------------------------------------------------------
