--- a/data.qmd
+++ b/data.qmd
@@ -7,72 +7,27 @@ draft: false
 
 ![](images/data-import-cheatsheet-thumbs.png)
 
+# Data Background
 
-This comes from the file `data.qmd`.
-
-Your first steps in this project will be to find data to work on.
-
-I recommend trying to find data that interests you and that you are knowledgeable about. A bad example would be if you have no interest in video games but your data set is about video games. I also recommend finding data that is related to current events, social justice, and other areas that have an impact.
-
-
-Initially, you will study _one dataset_ but later you will need to combine that data with another dataset. For this reason, I recommend finding data that has some date and/or location components. These types of data are conducive to interesting visualizations and analysis and you can also combine this data with other data that also has a date or location variable.
-Data from the census, weather data, economic data, are all relatively easy to combine with other data with time/location components.
-
-
-## What makes a good data set?
-
-* Data you are interested in and care about.
-* Data where there are a lot of potential questions that you can explore.
-* A data set that isn't completely cleaned already.
-* Multiple sources for data that you can combine.
-* Some type of time and/or location component.
-
-
-## Where to keep data?
-
-
-Below 50mb: In `dataset` folder
-
-Above 50mb: In `dataset_ignore` folder. This folder will be ignored by `git` so you'll have to manually sync these files across your team.
-
-### Sharing your data
-
-
-For small datasets (<50mb), you can use the `dataset` folder that is tracked by github. Add the files just like you would any other file.
-
-If you create a folder named `data` this will cause problems.
-
-For larger datasets, you'll need to create a new folder in the project root directory named `dataset-ignore`. This will be ignored by git (based off the `.gitignore` file in the project root directory) which will help you avoid issues with Github's size limits. Your team will have to manually make sure the data files in `dataset-ignore` are synced across team members.
-
-Your [load_and_clean_data.R](/scripts/load_and_clean_data.R) file is how you will load and clean your data. Here is a an example of a very simple one.
-
-```{r}
-library(here)
-source(
-  "scripts/load_and_clean_data.R",
-  echo = TRUE # Use echo=FALSE or omit it to avoid code output  
-)
-```
-
-### Load and clean data script
-
-The idea behind this file is that someone coming to your website could largely replicate your analyses after running this script on the original data sets to clean them.
-This file might create a derivative data set that you then use for your subsequent analysis.
-Note that you don't need to run this script from every post/page.
-Instead, you can load in the results of this script, which could be plain text files or `.RData` files. In your data page you'll describe how these results were created. If you have a very large data set, you might save smaller data sets that you can use for exploration purposes.
-To link to this file, you can use `[cleaning script](/scripts/load_and_clean_data.R)` which appears as [cleaning script](/scripts/load_and_clean_data.R). 
-
-## Data Background
+## Data Set 1: Child Opportunity Index
 Link: https://data.diversitydatakids.org/dataset/coi20-child-opportunity-index-2-0-database
 
 The Child Opportunity Index 2.0 (COI 2.0) is a comprehensive tool developed in collaboration with the Kirwan Institute for the Study of Race and Ethnicity at Ohio State University, released in January 2020. It measures neighborhood-level resources and conditions essential for children's healthy development across the United States. The COI is a composite index of children's neighborhood opportunity that contains data for every neighborhood (census tract) in the United States from every year for 2012 through 2021. It is comprised of 44 indicators in three domains (education, health and environment, and social and economic) and 14 subdomains. COI 2.0 compiles data from state and federal sources. This comprehensive data collection process examines approximately 72,000 neighborhood conditions crucial for children's well-being, including school quality, green space availability, air quality, and adult employment levels. The resulting Child Opportunity Score, ranging from 1 to 100, provides insight into each U.S. neighborhood and metro area's position in the national child opportunity landscape, aiming to spotlight disparities within the largest 100 U.S. metros. Particularly, it reveals significant racial inequities with implications for children's health, education, and life expectancy.
 
+```{r}
+library(png)
+img <- readPNG("images/hist of ed domain z scores.png")
+img
+```
+
+## Data Set 2: Raw Indicator Values
 Link: https://data.diversitydatakids.org/dataset/coi20-child-opportunity-index-2-0-database/resource/44ee1ea6-a3df-4af3-93b7-c4695d5ab6a6
  
 The component indicators data for COI 2.0 is a comprehensive collection of demographic data and raw indicator values from the American Community Survey (ACS) covering the years 2010 and 2015, correlating to the ACS 5-year data from 2008-12 and 2013-17 respectively. Most of the data points related to geographical and demographic information are structured to be similar to our original data set. Notably, this data set also includes raw numeric values for educational and socio-economic data such as college enrollment in nearby institutions (’ED_COLLEGE’) and poverty rate(’SE_POVRATE’).
  
 This dataset serves as a critical tool for understanding demographic distributions and trends, which will aid our analysis of the Child Opportunity Index.
 
+## Data Set 3: Child Population Data
 Link: https://data.diversitydatakids.org/dataset/coi20-child-opportunity-index-2-0-database/resource/44ee1ea6-a3df-4af3-93b7-c4695d5ab6a6
  
 The “Child population data - Number of children aged 0-17 years by race/ethnicity from the American Community Survey” uses Census data to describe the demographic of a micro regional area, including whether the area is one of the 100 largest metro areas in the U.S. The dataset includes the racial composition of the area broken down by proportions of children belonging to each race group.
@@ -80,39 +35,33 @@ The “Child population data - Number of children aged 0-17 years by race/ethnic
 We will use this dataset to help inform our analysis of the strength of select indicators in computing the overall Child Opportunity Index.
 
 To add more insight on the data, we will be using 3 different data files under the COI 2.0, which are the index data, child population data, and component indicators data respectively. There are 8 variables that are present in all 3 data sets, which, in essence, represent the geographical location of each metropolitan area. Some important variables to highlight in these datasets are the population of each race group per metro area, health insurance coverage, poverty rate, and median household income. We will keep a close eye on these features to see how they affect a child’s overall opportunity.
-  
-## Data Cleaning
+
+## Data Cleaning Process
 
 To clean our data set, we decided to remove columns "c5_ED_met", "c5_HE_met", "c5_SE_met", "c5_COI_met", "r_ED_met", "r_HE_met", "r_SE_met", "r_COI_met". These columns in particular contained majority empty cells and we discovered that they did not contribute much to the overall analyses of our data set. We added 3 dummy variables to indicate whether or not the census tract is within one of the 100 largest metro areas, within a micro/metro area that's not within one of the 100, and if it's not within a metro/micro area. If it it's True, the value in the column will be 1. 
 
 In the next step of our data cleaning process, we used `read.csv` to access our 3 data sets `childpop_race.csv`, `rawindicators.csv`, and `index.csv`. Then, in order to narrow the scope of our analysis, we used `filter(year != 2010)` to isolate data from the year 2010. We decided to merge all 3 data sets on `geoid` using `inner_join` since it was present in all 3 data sets. 
+
 ```{r}
 merged_df <- inner_join(childpop, indicators, by = "geoid") |>
   distinct()
 cleaned_merged_df <- inner_join(merged_df, index, by = "geoid") |>
   distinct()
 ```
+
 Upon merging all 3 data sets, we had an abundance of duplicated columns. We selected the duplicated columns and placed a negative sign, `-`, before the column name to indicate it's being removed. Additionally, we renamed the columns using `rename()` to clearly show what the columns are representing. The original column names were difficult to interpret and we found ourselves referring to the data dictionary often. In the last step of our data cleaning process, we removed any null values in the data. Since these null values were sparse, we chose not to remove the columns themselves as we had done in the beginning. Instead, we removed the rows that contained the null values by counting and summing the null rows and then omitting them with `na.omit()`. We also grouped the different states (including Washington D.C.) by Northwest, Northeast, South, and West regions into a new data frame called `region_data`. Additionally, we grouped the different racial groups by state to get a total of the different race populations per state to better visualize the distribution of race populations per state.
+
+## Load Data
 
 In our `load_and_clean_data.R` file, the code snippet utilizes the `tidyverse` package to handle data manipulation and analysis tasks efficiently. It reads in a RData file named `cleaned_merged_dg.RData` located within the `datasets` directory using the `load()` function. The cleaned data is saved as an `.rds` file named `cleaned_merged_df.rds` in the `scripts` directory using the `saveRDS` function. This ensures that the cleaned data set can be easily accessed and shared for future analyses. Additionally, the `readRDS` function is used to read the saved `.rds` file, enabling the retrieval of the cleaned data set for further processing or exploration.
 
+```{r}
+source(
+  "scripts/load_and_clean_data.R",
+  echo = TRUE # Use echo=FALSE or omit it to avoid code output  
+)
+```
+
+
+
 ----
-
-## Rubric: On this page
-
-You will
-
-* Describe where/how to find data.
-  * You must include a link to the original data source(s). Make sure to provide attribution to those who collected the data.
-  * Why was the data collected/curated? Who put it together? (This is important, if you don't know why it was collected then that might not be a good dataset to look at.
-* Describe the different data files used and what each variable means. 
-  * If you have many variables then only describe the most relevant ones and summarize the rest.
-* Describe any cleaning you had to do for your data.
-  * You *must* include a link to your `load_and_clean_data.R` file.
-  * Rename variables and recode factors to make data more clear.
-  * Also, describe any additional R packages you used outside of those covered in class.
-  * Describe and show code for how you combined multiple data files and any cleaning that was necessary for that.
-  * Some repetition of what you do in your `load_and_clean_data.R` file is fine and encouraged if it helps explain what you did.
-* Organization, clarity, cleanliness of the page
-  * Make sure to remove excessive warnings, use clean easy-to-read code (without side scrolling), organize with sections, use bullets and other organization tools, etc.
-  * This page should be self-contained.
